Adding login button

--- a/index.html
+++ b/index.html
@@ -45,6 +45,38 @@ function drop(ev) {
 </script>
 
 </head>
+<!-- Button to open the modal login form -->
+<button onclick="document.getElementById('id01').style.display='block'">Login</button>
+<title>Game Of Thrones Bingo Login</title>
+<link rel="stylesheet" rev="stylesheet" href="styles/loginStyle.css" />
+<!-- The Modal -->
+<div id="id01" class="modal">
+ <span onclick="document.getElementById('id01').style.display='none' "class="close" title="Close Modal">&times;</span>
+
+ <!-- Modal Content -->
+ <form class="modal-content animate" action="/action_page.php">
+   <div class="imgcontainer">
+     <img src="images/AGoTBanner.png" alt="Avatar" class="avatar">
+   </div>
+
+   <div class="container">
+     <label><b>Username</b></label>
+     <input type="text" placeholder="Enter Username" name="uname" required>
+
+     <label><b>Password</b></label>
+     <input type="password" placeholder="Enter Password" name="psw" required>
+
+     <button type="submit">Login</button>
+     <input type="checkbox" checked="checked"> Remember me
+   </div>
+
+   <div class="container" style="background-color:#f1f1f1">
+     <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+     <span class="psw">Forgot <a href="#">password?</a></span>
+   </div>
+ </form>
+</div>
+
 <body style="background-color:#0000FF">
     <div id="grid" class="grid-container">
         <div id="gridrow1" class="grid-row">
