--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ function drop(ev) {
 </head>
 <!-- Button to open the modal login form -->
 <button onclick="document.getElementById('id01').style.display='block'">Login</button>
-<title>Game Of Thrones Bingo Login</title>
+<title>Game Of Thrones Bingo</title>
 <link rel="stylesheet" rev="stylesheet" href="styles/loginStyle.css" />
 <!-- The Modal -->
 <div id="id01" class="modal">
@@ -76,6 +76,49 @@ function drop(ev) {
    </div>
  </form>
 </div>
+
+<!-- Button to open the modal -->
+<link rel="stylesheet" rev="stylesheet" href="styles/signupStyle.css" />
+<button onclick="document.getElementById('id02').style.display='block'">Sign Up</button>
+
+<!-- The Modal (contains the Sign Up form) -->
+<div id="id02" class="modal">
+ <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
+ <form class="modal-content animate" action="/action_page.php">
+   <div class="container">
+     <label><b>Email</b></label>
+     <input type="text" placeholder="Enter Desired Username" name="signUpUsrName" required>
+
+     <label><b>Password</b></label>
+     <input type="password" placeholder="Enter Password" name="signUpPsw" required>
+
+     <label><b>Repeat Password</b></label>
+     <input type="password" placeholder="Repeat Password" name="signUpPsw-repeat" required>
+     <input type="checkbox" checked="checked"> Remember me
+     <p>By creating an account you agree to <a href="#">not be a dick</a>.</p>
+
+     <div class="clearfix">
+       <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn">Cancel</button>
+       <button type="submit" class="signupbtn">Sign Up</button>
+     </div>
+   </div>
+ </form>
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('id01');
+var modal2 = document.getElementById('id02');
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+   if (event.target == modal) {
+       modal.style.display = "none";
+   }
+   else if (event.target == modal2) {
+     modal2.style.display = "none";
+   }
+}
+</script>
 
 <body style="background-color:#0000FF">
     <div id="grid" class="grid-container">
