--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ window.onclick = function(event) {
 }
 </script>
 
-<body style="background-color:#0000FF">
+<body background="images/background.jpg">
     <div id="grid" class="grid-container">
         <div id="gridrow1" class="grid-row">
             <div id="gridcell1" class="grid-cell">
